# fmriconnectiondisplay

./: CMakeLists.txt  Config.cmake  README.md  Readme.txt  requirements.md
resources/: 264Coordinates in MNI space (2).xls  color.xls  mni_power_264.h  mni_power_264_color.h
src/: CMakeLists.txt  MainWindow.cxx  MainWindow.h  MainWindow.ui  main.cpp  main.cxx  mni_power_264.h  mni_power_264_color.h  vtkFmriConnectionDisplay.cxx  vtkFmriConnectionDisplay.h
test/: WTC.csv  fmri_correlation.csv  fmri_correlation_1.csv  fmri_test.csv
